[gd_scene load_steps=9 format=3 uid="uid://ciglqbso03lml"]

[ext_resource type="Script" path="res://scenes/popups/first_time/ImportSettingsSection.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dfth5p8xpsgmy" path="res://assets/icons/success.svg" id="2"]
[ext_resource type="PackedScene" uid="uid://bfjcko6w8f2e" path="res://scenes/popups/copy_move/CopyMovePopup.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dc44afdxudnyi" path="res://scenes/popups/import_progress/ImportProgressPopup.tscn" id="4"]
[ext_resource type="Script" path="res://scenes/popups/first_time/CompatibilityDetails.gd" id="5"]
[ext_resource type="FontFile" path="res://resources/fonts/default_italic.tres" id="6"]
[ext_resource type="FontFile" path="res://resources/fonts/default_bold.tres" id="7"]
[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="8"]

[node name="ImportSettingsSection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IntroLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "If you have an existing retro gaming library setup, you may be able to import it automatically for RetroHub. Select below your existing platform if detected, or click \"Next\" if you don't wish to import/don't have any existing setup."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/IntroLabel"]
script = ExtResource("8")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ImportOptions" type="OptionButton" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_neighbor_top = NodePath("../../NextButton")
expand_icon = true

[node name="CompatibilityDetails" type="Control" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("5")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer/CompatibilityDetails"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
text = "Game metadata: "

[node name="MetadataIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2")

[node name="MetadataStatus" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " "

[node name="MetadataDetails" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6")
text = "Details about metadata"
autowrap_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
text = "Game media: "

[node name="MediaIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2")

[node name="MediaStatus" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " "

[node name="MediaDetails" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6")
text = "Details about media"
autowrap_mode = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
text = "Themes: "

[node name="ThemeIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2")

[node name="ThemeStatus" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = " "

[node name="ThemeDetails" type="Label" parent="VBoxContainer/VBoxContainer/CompatibilityDetails/ScrollContainer/VBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6")
text = "Details about themes"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/VBoxContainer/CompatibilityDetails"]
script = ExtResource("8")

[node name="NextButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../VBoxContainer/ImportOptions")
text = "Next"

[node name="CopyMovePopup" parent="." instance=ExtResource("3")]
unique_name_in_owner = true
visible = false

[node name="ImportProgressPopup" parent="." instance=ExtResource("4")]
visible = false

[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ImportOptions" to="." method="_on_ImportOptions_item_selected"]
[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="import_begin" from="CopyMovePopup" to="ImportProgressPopup" method="_on_CopyMovePopup_import_begin"]
[connection signal="import_finished" from="ImportProgressPopup" to="." method="_on_ImportProgressPopup_import_finished"]
